gatekeeper/custom/4-block-nodeport-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockNodePort
metadata:
  name: block-nodeport-services
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
    excludedNamespaces: ["kube-system", "argocd", "gatekeeper-system", "monitoring"]
